--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -12,6 +12,12 @@
 			  <category android:name="android.intent.category.LAUNCHER" />
 			  <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
 		  </intent-filter>
+		  <intent-filter>
+			<action android:name="android.intent.action.VIEW"/>
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+			<data android:scheme="open.special.dom" />
+		  </intent-filter>
 	  <meta-data android:name="unityplayer.UnityActivity" android:value="true" />
 	  </activity>
   </application>
